# RF-Comms

./: .gitignore  .gitmodules  AGENTS.md  PROTOCOL.md  README.md
Pico2_BasicRF/: CMakeLists.txt  pico_sdk_import.cmake
Pico2_BasicRF/src/: main.c  nrf24.c  nrf24.h
Pico2_V1_RF/: CMakeLists.txt
Pico2_V1_RF/src/: main.c  nrf24.c  nrf24.h  protocol.c  protocol.h
Pico2_V2_RF/: CMakeLists.txt
Pico2_V2_RF/host/: wanderer_client.py
Pico2_V2_RF/src/: main.cpp  protocol.h  tactical.h
